// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle LOAD_HOME_PAGE 1`] = `
Object {
  "baseUrl": "",
  "env": "development",
  "error": null,
  "isLoadingCompletion": false,
}
`;

exports[`should handle LOAD_HOME_PAGE_FAILURE 1`] = `
Object {
  "baseUrl": "",
  "env": "development",
  "error": [Error: 404],
  "isLoadingCompletion": true,
}
`;

exports[`should handle LOAD_HOME_PAGE_SUCCESS 1`] = `
Object {
  "baseUrl": "",
  "env": "development",
  "error": null,
  "isLoadingCompletion": true,
}
`;

exports[`should handle RESET_PAGES_STATUS 1`] = `
Object {
  "baseUrl": "",
  "env": "development",
  "error": null,
  "isLoadingCompletion": false,
}
`;

exports[`should handle SET_BASE_URL 1`] = `
Object {
  "baseUrl": "base-url",
  "env": "development",
  "error": null,
  "isLoadingCompletion": false,
}
`;

exports[`should handle SET_ENV 1`] = `
Object {
  "baseUrl": "",
  "env": "test",
  "error": null,
  "isLoadingCompletion": false,
}
`;
